{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 13,
  "lineage": "3ae13957-7459-23d9-99d4-33eae03da701",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0759ee82a00fe9a96",
            "association_id": "eipassoc-0eee781f63bb1726e",
            "domain": "vpc",
            "id": "eipalloc-0759ee82a00fe9a96",
            "network_border_group": "cn-north-1",
            "network_interface": "eni-0fe8c87bcf974d30a",
            "private_dns": "ip-11-1-0-85.cn-north-1.compute.internal",
            "private_ip": "11.1.0.85",
            "public_dns": "ec2-54-223-74-227.cn-north-1.compute.amazonaws.com.cn",
            "public_ip": "54.223.74.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-demo-eip"
            },
            "tags_all": {
              "Name": "tf-demo-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:583989036616:internet-gateway/igw-0c6b906b660fb355b",
            "id": "igw-0c6b906b660fb355b",
            "owner_id": "583989036616",
            "tags": {
              "Name": "tf-demo-igw"
            },
            "tags_all": {
              "Name": "tf-demo-igw"
            },
            "vpc_id": "vpc-007c863bbdc75ab62"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0759ee82a00fe9a96",
            "association_id": "eipassoc-0eee781f63bb1726e",
            "connectivity_type": "public",
            "id": "nat-073c0c273f0de27ba",
            "network_interface_id": "eni-0fe8c87bcf974d30a",
            "private_ip": "11.1.0.85",
            "public_ip": "54.223.74.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00b9b68c25890d856",
            "tags": {
              "Name": "tf demo NAT"
            },
            "tags_all": {
              "Name": "tf demo NAT"
            }
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_internet_gateway.IGW",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:583989036616:route-table/rtb-03ce15db7f8c6ee27",
            "id": "rtb-03ce15db7f8c6ee27",
            "owner_id": "583989036616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073c0c273f0de27ba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-rtb-pri"
            },
            "tags_all": {
              "Name": "tf-rtb-pri"
            },
            "timeouts": null,
            "vpc_id": "vpc-007c863bbdc75ab62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myEIP",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.NAT-GW",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:583989036616:route-table/rtb-0ccfeaff124174f21",
            "id": "rtb-0ccfeaff124174f21",
            "owner_id": "583989036616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6b906b660fb355b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-rtb-pub"
            },
            "tags_all": {
              "Name": "tf-rtb-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-007c863bbdc75ab62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PriRTAss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059fe9b573cd9efc7",
            "route_table_id": "rtb-03ce15db7f8c6ee27",
            "subnet_id": "subnet-00972bbd155da0bd1"
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.NAT-GW",
            "aws_route_table.privRT",
            "aws_subnet.myprivatesubnet",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PubRTAss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0348bcd1ff17988a7",
            "route_table_id": "rtb-0ccfeaff124174f21",
            "subnet_id": "subnet-00b9b68c25890d856"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publRT",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myprivatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:583989036616:subnet/subnet-00972bbd155da0bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-north-1d",
            "availability_zone_id": "cnn1-az4",
            "cidr_block": "11.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00972bbd155da0bd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583989036616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-demo-private-subnet"
            },
            "tags_all": {
              "Name": "tf-demo-private-subnet"
            },
            "vpc_id": "vpc-007c863bbdc75ab62"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mypublicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:583989036616:subnet/subnet-00b9b68c25890d856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-north-1a",
            "availability_zone_id": "cnn1-az1",
            "cidr_block": "11.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b9b68c25890d856",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583989036616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-demo-public-subnet"
            },
            "tags_all": {
              "Name": "tf-demo-public-subnet"
            },
            "vpc_id": "vpc-007c863bbdc75ab62"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:583989036616:vpc/vpc-007c863bbdc75ab62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.1.0.0/16",
            "default_network_acl_id": "acl-0fd7f96d716303414",
            "default_route_table_id": "rtb-0eec19d21c6ce6543",
            "default_security_group_id": "sg-06164dd86a7574b39",
            "dhcp_options_id": "dopt-09246b7a7f513d825",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007c863bbdc75ab62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eec19d21c6ce6543",
            "owner_id": "583989036616",
            "tags": {
              "Name": "tf-demo"
            },
            "tags_all": {
              "Name": "tf-demo"
            }
          }
        }
      ]
    }
  ]
}